# Fire-Shader

./: .gitignore  CMakeLists.txt  README.md
ShaderBoy/: main.cpp
ShaderBoy/Engine/include/Core/: Entity.h
ShaderBoy/Engine/src/Core/: Renderer.cpp
ShaderBoy/Engine/src/Utils/: TextureLoader.cpp
ShaderBoy/Rendering/src/Material/: Material.cpp
ShaderBoy/Rendering/src/Shader/: Shader.cpp
ShaderBoy/include/materials/: MFire.h
ShaderBoy/src/core/: main.cpp
ShaderBoy/src/managers/: GameManager.cpp
ShaderBoy/src/materials/: MFire.cpp
ShaderBoy/src/util/: Material.cpp  Renderer.cpp  TextureLoader.cpp
TheRealSlimShader/: main.cpp
TheRealSlimShader/Engine/include/Core/: GameManager.h  ShaderSelector.h
TheRealSlimShader/Engine/include/Utils/: TextureLoader.h
TheRealSlimShader/Engine/src/Core/: GameManager.cpp  ShaderSelector.cpp
TheRealSlimShader/Rendering/include/Material/: Material.h
TheRealSlimShader/assets/shaders/fire/: fragment.glsl
include/managers/: GameManager.h
include/materials/: MFire.h
include/shaders/: FireShader.h
include/util/: Material.h  Renderer.h  Shader.h  TextureLoader.h
shaders/: fragment.glsl
src/: main.cpp
src/core/: main.cpp
src/managers/: GameManager.cpp
src/materials/: MFire.cpp
src/shaders/: FireShader.cpp
src/util/: Renderer.cpp  Shader.cpp
